--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,5 +1,12 @@
 <section id="skills">
     <div class="skills-container">
+        <div class="looking-for-responsive">
+            <h3>Looking for <span>another skill</span>?</h3>
+            <div class="skills-text">
+                Feel free to contact me. I look forward to expanding on my previous knowledge.
+            </div>
+            <a href="#contact"><button>Get in touch</button></a>
+        </div>
         <div class="skills-img-container">
             <div class="skill">
                 <img src="assets/img/skills/html.svg" alt="">
