--- a/src/app/header/header.responsive.scss
+++ b/src/app/header/header.responsive.scss
@@ -2,6 +2,12 @@
     display: none;
 }
 
+@media screen and (max-width:1400px) {
+    header {
+        padding: 0 100px;
+    }
+}
+
 @media screen and (max-width:1200px) {
 
     header {
@@ -47,15 +53,32 @@
         from {
             opacity: 0;
         }
+
         to {
             opacity: 1;
         }
     }
-
 }
 
-@media screen and (max-width:992px) {}
+@media screen and (max-width:992px) {
+    header {
+        height: 80px;
+        padding: 0 32px;
+
+        nav {
+            gap: 64px;
+            font-size: 32px;
+        }
+    }
+}
 
 @media screen and (max-width:768px) {}
 
-@media screen and (max-width:576px) {}
+@media screen and (max-width:576px) {
+    header {
+        nav {
+            gap: 60px;
+            font-size: 24px;
+        }
+    }
+}
