--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -1,7 +1,7 @@
 .reviews-container {
     display: flex;
     justify-content: flex-end;
-    margin: 200px 0 0 200px;
+    margin: 200px 0 200px 200px;
     display: flex;
     flex-direction: column;
     gap: 32px;
