--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,15 +97,60 @@ button {
     align-items: center;
 }
 
-@media screen and (max-width:1400px) {}
+@media screen and (max-width:1400px) {
+    h1 {
+        font-size: 104px;
+        line-height: 110px;
+    }
 
-@media screen and (max-width:1200px) {}
+    h2 {
+        font-size: 72px;
+        line-height: 80px;
+    }
 
-@media screen and (max-width:992px) {}
+    h3 {
+        font-size: 40px;
+        line-height: 48px;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    h1 {
+        font-size: 80px;
+        line-height: 90px;
+    }
+
+    h2 {
+        font-size: 64px;
+        line-height: 74px;
+    }
+
+    h3 {
+        font-size: 36px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width:992px) {
+    h1 {
+        font-size: 66px;
+        line-height: 74px;
+    }
+
+    h2 {
+        font-size: 56px;
+        line-height: 62px;
+    }
+
+    h3 {
+        font-size: 32px;
+        line-height: 38px;
+    }
+}
 
 @media screen and (max-width:768px) {
     h1 {
-        font-size: 45px;
+        font-size: 56px;
         line-height: 54px;
     }
 
@@ -124,4 +169,26 @@ button {
     }
 }
 
-@media screen and (max-width:576px) {}
+@media screen and (max-width:576px) {
+    h1 {
+        font-size: 42px;
+        line-height: 46px;
+    }
+
+    h2 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+}
+
+@media screen and (max-width:468px) {
+    h1 {
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    h2 {
+        font-size: 24px;
+        line-height: 28px;
+    }
+}
