--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,5 +10,6 @@
             <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
+        <div class="legal-notice-responsive">Legal Notice</div>
     </div>
 </footer>
