--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,13 +2,13 @@
 <img class="landing-page-blue-shadow" src="assets/img/blue-shadow-1.svg" alt="" />
 <div class="landing-page-container">
     <div class="landing-page-headline-container">
-        <div class="landing-page-iam">I am</div>
+        <div class="landing-page-iam">{{ 'i-am' | translate }}</div>
         <div class="landing-page-name-container">
             <h1 class="landing-page-name">Alexander Riedel</h1>
-            <span class="landing-page-slogan">FRONTEND DEVELOPER</span>
+            <span class="landing-page-slogan">{{ 'frontend-developer' | translate }}</span>
         </div>
     </div>
-    <a href="#contact"><button>Let's talk!</button></a>
+    <a href="#contact"><button>{{ 'lets-talk' | translate }}</button></a>
     <div class="landing-page-bottom">
         <div class="landing-page-btns">
             <div class="green-line"></div>
@@ -16,6 +16,6 @@
             <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
-        <div class="landing-page-scrolldown"><a href="#about-me">Scroll down &#10132;</a></div>
+        <div class="landing-page-scrolldown"><a href="#about-me">{{ 'scroll-down' | translate }} &#10132;</a></div>
     </div>
 </div>
