--- a/src/app/portfolio/portfolio.responsive.css
+++ b/src/app/portfolio/portfolio.responsive.css
@@ -47,7 +47,11 @@
     }
 }
 
-@media screen and (max-width:768px) {}
+@media screen and (max-width:768px) {
+    img {
+        max-width: 100%;
+    }
+}
 
 @media screen and (max-width:576px) {}
 
