--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -164,6 +164,7 @@ input[type=submit] {
     box-shadow: 4px 4px 4px 0px #00000040;
     font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 24px;
+    transition: all 0.3s ease;
 
     &:hover {
         transform: scale(1.2);
