--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,11 +1,11 @@
 <section id="skills">
     <div class="skills-container">
         <div class="looking-for-responsive">
-            <h3>Looking for <span>another skill</span>?</h3>
-            <div class="skills-text">
-                Feel free to contact me. I look forward to expanding on my previous knowledge.
-            </div>
-            <a href="#contact"><button>Get in touch</button></a>
+            <h3>
+                {{ 'looking-for' | translate }} <span>{{ 'another-skill' | translate }}</span>?
+            </h3>
+            <div class="skills-text">{{ 'feel-free-to-contact' | translate }}</div>
+            <a href="#contact"><button>{{ 'get-in-touch' | translate }}</button></a>
         </div>
         <div class="skills-img-container">
             <div class="skill">
@@ -59,20 +59,15 @@
         </div>
         <div class="skills-text-container">
             <div class="skills-headline">
-                <h2>Skills</h2>
+                <h2>{{ 'skills' | translate }}</h2>
                 <div class="skills-headline-line"></div>
             </div>
-            <div class="skills-text">
-                My journey has involved working on diverse projects, employing a range of frontend technologies and
-                concepts. I am open to embracing new technologies and methodologies to Continously enhance my skills and
-                stay ahead in the ever-evolving landscape of web development.</div>
+            <div class="skills-text">{{ 'my-journey' | translate }}</div>
             <div class="looking-for">
-                <h3>Looking for another skill?</h3>
-                <div class="skills-text">
-                    Feel free to contact me. I look forward to expanding on my previous knowledge.
-                </div>
+                <h3>{{ 'looking-for' | translate }} {{ 'another-skill' | translate }}?</h3>
+                <div class="skills-text">{{ 'feel-free-to-contact' | translate }}</div>
             </div>
-            <a href="#contact"><button>Get in touch</button></a>
+            <a href="#contact"><button>{{ 'get-in-touch' | translate }}</button></a>
         </div>
     </div>
 </section>
