--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="footer-container">
         <div class="footer-left">
             <div class="footer-name">Alexander Riedel</div>
-            <div class="legal-notice">Legal Notice</div>
+            <div class="legal-notice">{{ 'legal-notice' | translate }}</div>
         </div>
         <div class="footer-middle">&#169; Alexander Riedel 2024</div>
         <div class="footer-right">
@@ -10,6 +10,6 @@
             <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
-        <div class="legal-notice-responsive">Legal Notice</div>
+        <div class="legal-notice-responsive">{{ 'legal-notice' | translate }}</div>
     </div>
 </footer>
