--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -76,9 +76,8 @@
 
 .review-picture {
     height: 100%;
-    aspect-ratio: 1/1;
+    width: 100%;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
 
     img {
