--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="name"><a href="#">Alexander Riedel</a></div>
+    <div class="name"><a href="#">ALE<span>X</span>ANDER</a></div>
     <div class="burger-menu" (click)="toggleMenu()">
         <span></span>
         <span></span>
