--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -16,27 +16,57 @@ header {
         gap: 29px;
         display: flex;
         font-size: 24px;
+        position: relative;
 
         a {
             color: #FFFFFF;
             text-decoration: none;
+            position: relative;
+            overflow: hidden;
 
             &.active {
                 color: #70E61C !important;
+
+                &::after {
+                    transform: translateX(0);
+                }
             }
 
             &:hover {
                 color: #70E61C;
+
+                &::after {
+                    transform: translateX(0);
+                }
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                left: -1px;
+                bottom: 0;
+                height: 3px;
+                width: 55px;
+                background-color: #9747FF;
+                transform: translateX(-100%);
+                transition: transform 0.3s ease;
             }
         }
     }
 }
 
 .name {
+
     a {
-        font-size: 20px;
+        font-size: 40px;
+        font-weight: 700;
+        letter-spacing: 12px;
         color: #FFFFFF;
         text-decoration: none;
+
+        span {
+            color: #9747FF;
+        }
     }
 
 }
