--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-left">
-            <div class="footer-name">Alexander Riedel</div>
+            <div class="footer-name"><a href="#">ALE<span>X</span>ANDER</a></div>
             <div class="legal-notice">{{ 'legal-notice' | translate }}</div>
         </div>
         <div class="footer-middle">&#169; Alexander Riedel 2024</div>
