--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -8,6 +8,7 @@
     gap: 80px;
 
     button {
+        position: relative;
         z-index: 1;
         padding: 15px 30px;
         border: 1px solid #70E61C;
@@ -55,19 +56,26 @@
     writing-mode: vertical-lr;
     transform: rotate(180deg);
     font-size: 90px;
+    text-shadow: #141D2F 0px 0px 24px;
 }
 
 .landing-page-name-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 24px;
+}
+
+h1 {
+    text-shadow: #141D2F 0px 0px 24px;
 }
 
 .landing-page-slogan {
     display: flex;
-    font-size: 64px;
-    line-height: 76px;
+    font-size: 86px;
+    line-height: 86px;
     color: #9747FF;
+    text-shadow: #141D2F 0px 0px 24px;
 }
 
 .landing-page-bottom {
@@ -112,9 +120,23 @@
 .landing-page-scrolldown {
     writing-mode: vertical-lr;
     font-size: 24px;
+    transition: all 0.3s ease;
 
     a {
         color: #FFFFFF;
         text-decoration: none;
     }
+
+    &:hover {
+        transform: scale(1.1);
+    }
+
+}
+
+.deutsch {
+    font-size: 64px;
+}
+
+.englisch {
+    background-color: #e0e0e0;
 }
