--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -19,6 +19,7 @@
         </div>
         <div class="review-picture-box">
             <div class="review-picture">
+                <div class="space"></div>
                 <img [src]="reviews[currentIndex].image" id="review-img-{{[currentIndex]}}"
                     [alt]="'Image for ' + (reviews[currentIndex].authorKey | translate)">
                 <div class="review-picture-line"></div>
