--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,7 @@ body {
 }
 
 body {
+    min-width: 320px;
     margin: 0;
     padding: 0;
     background-color: #141D2F;
@@ -80,9 +81,9 @@ h3 {
 button {
     color: #FFFFFF;
     font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 24px;
+    font-size: 32px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.125s ease;
 }
 
 .dn {
@@ -100,7 +101,7 @@ button {
 @media screen and (max-width:1400px) {
     h1 {
         font-size: 104px;
-        line-height: 110px;
+        line-height: 104px;
     }
 
     h2 {
@@ -112,12 +113,16 @@ button {
         font-size: 40px;
         line-height: 48px;
     }
+
+    button {
+        font-size: 28px;
+    }
 }
 
 @media screen and (max-width:1200px) {
     h1 {
         font-size: 80px;
-        line-height: 90px;
+        line-height: 80px;
     }
 
     h2 {
@@ -129,12 +134,16 @@ button {
         font-size: 36px;
         line-height: 46px;
     }
+
+    button {
+        font-size: 24px;
+    }
 }
 
 @media screen and (max-width:992px) {
     h1 {
         font-size: 66px;
-        line-height: 74px;
+        line-height: 66px;
     }
 
     h2 {
@@ -143,8 +152,8 @@ button {
     }
 
     h3 {
-        font-size: 32px;
-        line-height: 38px;
+        font-size: 42px;
+        line-height: 46px;
     }
 }
 
@@ -154,18 +163,20 @@ button {
         line-height: 54px;
     }
 
+    /*
     h2 {
         font-size: 45px;
         line-height: 54px;
     }
+    */
 
     h3 {
-        font-size: 24px;
-        line-height: 28px;
+        font-size: 32px;
+        line-height: 36px;
     }
 
     button {
-        font-size: 16px;
+        font-size: 20px;
     }
 }
 
@@ -176,8 +187,17 @@ button {
     }
 
     h2 {
-        font-size: 36px;
-        line-height: 40px;
+        font-size: 48px;
+        line-height: 52px;
+    }
+
+    h3 {
+        font-size: 28px;
+        line-height: 32px;
+    }
+
+    button {
+        font-size: 18px;
     }
 }
 
@@ -188,7 +208,16 @@ button {
     }
 
     h2 {
-        font-size: 24px;
-        line-height: 28px;
+        font-size: 30px;
+        line-height: 34px;
+    }
+
+    h3 {
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    button {
+        font-size: 16px;
     }
 }
