--- a/src/app/landing-page/landing-page.responsive.scss
+++ b/src/app/landing-page/landing-page.responsive.scss
@@ -58,6 +58,7 @@
     .landing-page-slogan {
         font-size: 44px;
         line-height: 44px;
+        text-shadow: #141D2F 0px 0px 10px;
     }
 
     .landing-page-bottom {
@@ -110,6 +111,7 @@
     .landing-page-slogan {
         font-size: 28px;
         line-height: 32px;
+        text-shadow: #141D2F 0px 0px 8px;
     }
 
     .landing-page-bottom {
@@ -138,6 +140,7 @@
     .landing-page-slogan {
         font-size: 20px;
         line-height: 24px;
+        text-shadow: #141D2F 0px 0px 6px;
     }
 
     .landing-page-bottom {
