--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -41,6 +41,8 @@
 }
 
 .contact-left {
+    width: calc(50% - 32px);
+    margin-right: 32px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -65,14 +67,15 @@
 }
 
 .contact-left-text {
-    margin: 0 50px 0 150px;
+    margin: 0 0 0 150px;
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
 .contact-right {
-    margin: 0 150px 0 100px;
+    width: calc(50% - 150px - 32px);
+    margin: 0 150px 0 32px;
     display: flex;
 
     form {
@@ -149,7 +152,7 @@ textarea {
         position: absolute;
         font-size: 14px;
         color: #FF0000;
-        top: 36px;
+        top: -26px;
         left: 0;
     }
 }
@@ -164,17 +167,17 @@ input[type=submit] {
     box-shadow: 4px 4px 4px 0px #00000040;
     font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 24px;
-    transition: all 0.3s ease;
+    transition: all 0.125s ease;
 
     &:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
         border: 1px solid #9747FF;
         box-shadow: none;
         background-color: #9747FF;
     }
 
     &:active {
-        transform: scale(1.1);
+        transform: scale(1.05);
         border: 1px solid #FFFFFF;
         box-shadow: none;
         background-color: #FFFFFF;
