--- a/src/app/contact/contact.responsive.css
+++ b/src/app/contact/contact.responsive.css
@@ -5,7 +5,14 @@
     }
 
     .contact-left {
+        width: calc(50% - 16px);
+        margin-right: 16px;
         gap: 24px;
+    }
+
+    .contact-right {
+        width: calc(50% - 64px - 16px);
+        margin: 0 64px 0 16px;
     }
 
     .contact-headline2 {
@@ -17,22 +24,28 @@
     }
 
     .contact-left-text {
-        margin: 0 32px 0 64px;
+        margin: 0 0 0 64px;
         gap: 24px;
-    }
-
-    .contact-right {
-        margin: 0 64px 0 32px;
     }
 }
 
 @media screen and (max-width:1200px) {
     .contact-left {
-        width: 50%;
+        width: calc(50% - 20px);
+        margin-right: 20px;
     }
 
     .contact-right {
-        width: 50%;
+        width: calc(50% - 40px - 20px);
+        margin: 0 40px 0 20px;
+    }
+
+    .contact-headline2-line {
+        width: 24px;
+    }
+
+    .contact-left-text {
+        margin: 0 0 0 40px;
     }
 }
 
@@ -49,25 +62,114 @@
 
     .contact-left {
         width: unset;
+        margin-right: 32px;
     }
 
-    .contact-headline2-line {
-        width: 40px;
+    .contact-headline {
+        gap: 8px;
+    }
+
+    .contact-headline2 {
+        gap: 8px;
     }
 
     .contact-left-text {
-        margin: 0 64px 48px 64px;
+        margin: 0 0 48px 32px;
     }
 
     .contact-right {
         width: unset;
-        margin: 0 64px 128px 64px;
+        margin: 0 32px 128px 32px;
         justify-content: center;
+
+        form {
+            align-items: center;
+        }
+    }
+
+    input[type=submit] {
+        margin-top: 32px;
+
+        &:hover {
+            transform: none;
+            border: 0;
+        }
+
+        &:active {
+            transform: none;
+            border: 0;
+        }
     }
 }
 
-@media screen and (max-width:768px) {}
+@media screen and (max-width:768px) {
+    .contact-policy-check {
+        .checkbox-message {
+            top: -24px;
+        }
+    }
+}
 
-@media screen and (max-width:576px) {}
+@media screen and (max-width:576px) {
+    .contact-policy-check {
+        .checkbox-message {
+            font-size: 12px;
+        }
+    }
 
-@media screen and (max-width:468px) {}
+    .contact-right {
+        form {
+            .form-name,
+            .form-email,
+            .form-message {
+                span {
+                    font-size: 12px;
+                    top: -12px;
+                    right: 2px;
+                    text-shadow: #141D2F 0px 0px 8px;
+                }
+            }
+        }
+    }
+
+    input[type=submit] {
+        padding: 12px 16px;
+        font-size: 20px;
+    }
+
+    input[type=submit]:disabled {
+        padding: 12px 16px;
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:468px) {
+    .contact-headline {
+        margin-bottom: 32px;
+        gap: 4px;
+    }
+
+    .contact-headline2 {
+        gap: 4px;
+    }
+
+    .contact-headline2-line {
+        width: 12px;
+    }
+
+    .contact-left {
+        margin-right: 16px;
+    }
+
+    .contact-left-text {
+        margin: 0 0 32px 16px;
+    }
+
+    .contact-right {
+        margin: 0 16px 64px 16px;
+
+        form {
+            gap: 8px;
+        }
+    }
+}
