--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -24,7 +24,7 @@
 }
 
 .portfolio-headline-text {
-    margin: 0 150px;
+    margin: 32px 150px 0 150px;
 }
 
 .portfolio-project-container {
@@ -32,7 +32,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 48px;
+    gap: 64px;
 }
 
 .portfolio-project {
