--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -32,11 +32,15 @@
         width: 60px;
         object-fit: cover;
         padding: 12px;
-        transition: transform 0.3s ease;
+        transition: transform 0.125s ease;
 
         &:hover {
             transform: scale(1.2) translateY(-15px);
         }
+    }
+
+    span {
+        text-align: center;
     }
 }
 
